Updates the following files to remove the deprecated use of the  `new Boolean(boolean)` constructor and replace them with a call to the static `Boolean.valueOf(boolean)` method.
Team.java
Report.java
PreferenceStore.java
GameOptions.java
AbstractOptions.java
InitiativeRoll.java
Client.java